# Gemcutter-Project-Template

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  Settings.cfg
source/: CMakeLists.txt  Game.cpp  Game.h  main.cpp
workspace/shaders/default/: VertexColor.shader
